# client-server-license-generator

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
cmake/: Findlicensecc.cmake
projects/DEFAULT/: private_key.rsa
projects/DEFAULT/include/licensecc/DEFAULT/: licensecc_properties.h  public_key.h
src/: App.cpp  DatabaseComponent.hpp
src/client/: LicenseRequestClient.cpp  LicenseRequestClient.hpp
src/controller/: LicenseGenerationController.cpp  LicenseGenerationController.hpp
src/db/: UserDb.hpp
src/dto/: DTOs.hpp
src/license/: Request.cpp  Request.hpp  main.cpp
src/server/: LicenseGenerationController.hpp
src/service/: TokenService.cpp  TokenService.hpp
test/: LicenseGenerationControllerTest.cpp  LicenseGenerationControllerTest.hpp  tests.cpp
